# hofundr

./: .gitignore  Cargo.toml
src/: api.rs  config.rs  data.rs  main.rs  opaque.rs  scalar.rs
test-client/: Cargo.toml
test-client/src/: cli.rs  data.rs  main.rs
