[package]
name = "hofundr"
version = "0.1.0"
edition = "2024"

[lints.rust]
text_direction_codepoint_in_literal = "allow"

[workspace]
members = ["test-client"]

[dependencies]
actix-web = "4.12.1"
actix-web-lab = "0.24.3"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
clap = { version = "4.5.59", features = ["derive"] }
expanduser = "1.2.2"
heed = "0.22.0"
home = "0.5.12"
log = "0.4.29"
opaque-ke = { version = "4.1.0-pre.1", features = ["argon2", "ed25519", "std"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
spdlog-rs = { version = "0.5.2", features = ["log", "multi-thread"] }
tokio = { version = "1.49.0", features = ["fs", "macros"] }
toml = "1.0.2"
utoipa = { version = "5.4.0", features = ["actix_extras", "preserve_order", "preserve_path_order", "rc_schema", "uuid"] }
uuid = { version = "1.21.0", features = ["fast-rng", "serde", "v4"] }

[profile.release]
strip = "symbols"
panic = "abort"
opt-level = 3
lto = "fat"
codegen-units = 1
