[package]
name = "test-client"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
log = { version = "0.4.29", features = ["kv"] }
opaque-ke = { version = "4.1.0-pre.1", features = ["argon2", "ed25519", "std"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["fs", "io-std", "macros", "rt-multi-thread"] }
uuid = { version = "1.21.0", features = ["v4", "serde", "fast-rng"] }

structured-logger = { version = "1.0.5", optional = true }
serde_json = "1.0.149"

[features]
default = []
logging = ["structured-logger"]
